[package]
name = "unity_pdb_downloader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
goblin = "0.8.0"
reqwest = { version = "0.12.4", features = ["stream"] }
bytes = "1.6.0"
tokio = { version = "1.38.0", features = ["full"] }
tokio-util = { version = "0.7.11", features = ["compat"] }
futures-util = "0.3.30"
cab = "0.6.0"
indicatif = "0.17.8"
clap = { version = "4.5.7", features = ["derive"] }